Fixing news column size alignement for teblets.

--- a/LaSalle.Website/LaSalle.Web/Css/main.css
+++ b/LaSalle.Website/LaSalle.Web/Css/main.css
@@ -2377,7 +2377,7 @@ a.more {
     }
 
         .features-boxed ul li {
-            width: 47%;
+            width: 48%;
             margin-right: 2%;
             margin-bottom: 4%;
             min-height: 370px;
@@ -2442,7 +2442,7 @@ a.more {
     }
 
         .features-news ul li {
-            width: 47%;
+            width: 48%;
             margin-right: 2%;
             float: left;
             color: #fff;
